credit-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: credit-app-service
  namespace: <demo>
spec:
  selector:
    app: credit-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
